--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,46 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
+    <ImageView
+        android:id="@+id/iv_header"
+        android:src="@drawable/ic_baseline_cloud_download_24"
+        app:tint="@color/purple"
+        android:background="@color/darkBlue"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <RadioGroup
+        android:id="@+id/rg_choices"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/iv_header"
+        app:layout_constraintBottom_toTopOf="@id/custom_button"
+        android:padding="8dp">
+        <RadioButton
+            android:id="@+id/rb_glide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:textSize="18sp"
+            android:text="Glide - Image loading library by BumpTech" />
+        <RadioButton
+            android:id="@+id/rb_udacity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:textSize="18sp"
+            android:text="LoadApp - current repository by Udacity" />
+
+        <RadioButton
+            android:id="@+id/rb_retrofit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:textSize="18sp"
+            android:text="Retrofit - Type-safe HTTP client for Android and Java by Square Inc"
+            />
+    </RadioGroup>
     <com.udacity.LoadingButton
         android:id="@+id/custom_button"
         android:layout_width="0dp"
@@ -17,6 +56,6 @@
         android:layout_height="60dp"
         android:layout_margin="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/rg_choices" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
