--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -58,6 +58,7 @@
         android:background="@color/colorPrimary"
         android:textColor="@color/white"
         android:text="Download"
+        app:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rg_choices" />
 
