text and custom circle drawn in canvas

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,6 +2,6 @@
 <resources>
     <declare-styleable name="LoadingButton">
         <attr name="textSize" format="dimension" />
-
+        <attr name="circleRadius" format="dimension"/>
     </declare-styleable>
 </resources>
