--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -30,14 +30,14 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:textSize="18sp"
-            android:text="Glide - Image loading library by BumpTech" />
+            android:text="@string/glide_image_loading_library_by_bumptech" />
         <RadioButton
             android:id="@+id/rb_udacity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:textSize="18sp"
-            android:text="LoadApp - current repository by Udacity" />
+            android:text="@string/loadapp_current_repository_by_udacity" />
 
         <RadioButton
             android:id="@+id/rb_retrofit"
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:textSize="18sp"
-            android:text="Retrofit - Type-safe HTTP client for Android and Java by Square Inc"
+            android:text="@string/retrofit_type_safe_http_client_for_android_and_java_by_square_inc"
             />
     </RadioGroup>
     <com.udacity.LoadingButton
